[package]
name = "luanti-mts"
description = "Read and write Luanti (formerly Minetest) schematic files (MTS)"
version = "0.1.0"
license = "MIT"
readme = "README.md"
edition = "2024"
rust-version = "1.88"

[dependencies]
flate2 = "1.1.2"
ndarray = "0.16.1"
thiserror = "2.0.12"
winnow = "0.7.12"

[dev-dependencies]
criterion = "0.6.0"
rstest = "0.25"

[[bench]]
name = "benchmarks"
harness = false
